Fix missing border radius

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ header {
 html {
   height: 100%;
   overflow: hidden;
-  border: 1px solid dark-gray;
+  border: 2px groove dark-gray;
   background: dark-gray!important;
   border-radius: 2px;
 }
@@ -28,7 +28,8 @@ html, body{
   margin: 0;
   width: 100%;
   height: 100%;
-  background: #5682a3;
+  /*background: #5682a3;*/
+  background: rgba(140, 140, 140, 0.5);
 }
 #controls, #headerbar-footer{
   height: 44px;
@@ -41,14 +42,15 @@ html, body{
 }
 
 #controls{
-  border: 1px solid #83aac7;
+  border: 2px groove #83aac7;
   border-bottom: none;
   top: 0;
+  border-radius: 152px 279px 77px 00px;
 }
 
 #headerbar-footer{
-  background: linear-gradient(to bottom, rgba(125,185,232,0) 1%,rgba(125,185,232,0) 10%,rgba(112,165,206,0) 43%,rgba(89,131,160,1) 100%);
-  border-bottom: 1px solid #83aac7;
+  /*background: linear-gradient(to bottom, rgba(125,185,232,0) 1%,rgba(125,185,232,0) 10%,rgba(112,165,206,0) 43%,rgba(89,131,160,1) 100%);
+  border-bottom: 2px groove #83aac7;*/
   top: 34px;
 }
 
@@ -80,4 +82,5 @@ webview{
   width: 100%;
   padding-bottom: 5px;
   -webkit-app-region: no-drag;
+  margin-top: 2px;
 }
